--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@ apply plugin: 'java'
 apply plugin: 'war'
 
 dependencies {
-    compile group:'org.springframework', name:'spring-webmvc', version:'4.1.7.RELEASE'
-    compile group:'javax.servlet', name:'javax.servlet-api', version:'3.0.1'
-    testCompile group:'junit', name:'junit', version:'4.12'
-    testCompile group:'org.mockito', name:'mockito-all', version:'1.10.19'
-    testCompile group:'org.springframework', name:'spring-test', version:'4.1.7.RELEASE'
+    compile 'org.springframework:spring-webmvc:4.1.7.RELEASE'
+    compile 'javax.servlet:javax.servlet-api:3.0.1'
+    compile 'commons-fileupload:commons-fileupload:1.3.1'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.0'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-all:1.10.19'
+    testCompile 'org.springframework:spring-test:4.1.7.RELEASE'
 }
 
 repositories {
@@ -14,5 +16,5 @@ repositories {
 }
 
 war {
-    archiveName 'gradle-built'
+    baseName 'gradle-built'
 }
