Use bower & npm to manage js depedencies and integrate into gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,27 @@
+plugins {
+    id "com.moowork.node" version "0.10"
+}
+
 apply plugin: 'java'
 apply plugin: 'war'
+
+node {
+    version = '0.12.2'
+    npmVersion = '2.7.5'
+    download = true
+}
+
+task npmPackages(type: NpmTask) {
+    description = "Install Node.js packages"
+    args = [ 'config', 'set', 'cache', "caches/npm" ]
+    args = [ 'install' ]
+}
+
+task bowerInstall(type: NodeTask) {
+    script = file('node_modules/bower/bin/bower')
+    args = ['install']
+    dependsOn npmPackages
+}
 
 dependencies {
     compile 'org.springframework:spring-webmvc:4.1.7.RELEASE'
@@ -16,5 +38,5 @@ repositories {
 }
 
 war {
-    baseName 'gradle-built'
+    baseName 'angular-webapp'
 }
