--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "com.moowork.node" version "0.10"
+    id "com.moowork.grunt" version "0.10"
 }
 
 apply plugin: 'java'
@@ -23,6 +24,13 @@ task bowerInstall(type: NodeTask) {
     dependsOn npmPackages
 }
 
+task karma(type: NodeTask) {
+    script = file('node_modules/karma/bin/karma')
+    args = ['start', 'karma.conf.js']
+    //args = ['init', 'karma2.conf.js']
+    //args = ['--browsers', 'PhantomJS', 'custom']
+}
+
 dependencies {
     compile 'org.springframework:spring-webmvc:4.1.7.RELEASE'
     compile 'javax.servlet:javax.servlet-api:3.0.1'
@@ -39,4 +47,5 @@ repositories {
 
 war {
     baseName 'angular-webapp'
+    dependsOn bowerInstall
 }
